# opengl-zed-ar

./: PyOpenGL-3.1.6-cp310-cp310-win_amd64.whl  README.md  Taskfile.yml  aligned_depth_map.py  depth_sensing.py  get_python_api.py  pyproject.toml  pyzed-5.0-cp310-cp310-win_amd64.whl  simple3Dobject.py  viewer.py
ogl_viewer/: viewer.py
simple/: objects.py  shader.py  simple_example.py  simple_viewer.py
start_over_simpler/: objects.py  shader.py  simple_example.py  simple_viewer.py
