[tool.poetry]
name = "zed-opengl"
version = "0.1.0"
description = ""
authors = ["ducteyes <diego.granero.marana@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
pyglm = "^2.8.2"
pip = "^25.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
